syntax = "proto3";

package cache;

option go_package = "shardo/proto;cachepb";

service CacheService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Set (SetRequest) returns (SetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc Metrics (MetricsRequest) returns (MetricsResponse);
}

message GetRequest {
  string key = 1;
}
message GetResponse {
  bytes value = 1;
  bool found = 2;
}
message SetRequest {
  string key = 1;
  bytes value = 2;
  int64 ttl = 3;
}
message SetResponse {}
message DeleteRequest {
  string key = 1;
}
message DeleteResponse {}
message MetricsRequest {}
message MetricsResponse {
  int32 hits = 1;
  int32 misses = 2;
  int32 size = 3;
} 